# mini-commerce-3tier

./: .gitignore  BUILD_LOG.md  README.md
cache/: .gitignore  README.md
cache/baremetal/: install-redis.sh  redis.conf
cache/docker/: docker-compose.yml
cache/managed/: README.md
db/: .gitignore  README.md
db/baremetal/: install-mysql.sh  my.cnf
db/docker/: docker-compose.yml
db/init/: 01-init.sql  02-seed-products.sql
db/managed/: README.md
was/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
was/alembic/: env.py
was/alembic/versions/: 001_initial_schema.py
was/app/: __init__.py  config.py  db.py  deps.py  exceptions.py  logging_config.py  main.py  middleware.py  rate_limit.py  redis_client.py  security.py  startup_seed.py
was/app/api/admin/: __init__.py  router.py
was/app/api/auth/: __init__.py  router.py
was/app/api/cart/: __init__.py  router.py
was/app/api/orders/: __init__.py  router.py
was/app/api/products/: __init__.py  router.py
was/app/models/: __init__.py  order.py  product.py  user.py
was/app/schemas/: cart.py  order.py  product.py  user.py
was/app/services/: auth_service.py  cart_service.py  order_service.py  payment_mock.py  product_service.py
was/deploy/: deploy.sh  env.example  gunicorn.conf.py  seed.py
was/deploy/systemd/: mini-commerce-was.service
was/tests/: conftest.py
was/tests/integration/: test_auth_api.py  test_health.py
was/tests/unit/: test_cart_service.py  test_config.py  test_exceptions.py  test_payment_mock.py  test_security.py
web/: .gitignore  README.md
web/app/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/app/src/: App.tsx  index.css  router.tsx  vite-env.d.ts
web/app/src/api/: auth.ts  cart.ts  client.ts  orders.ts  products.ts
web/app/src/components/: AdminRoute.tsx  CartItemRow.tsx  ErrorBoundary.tsx  Layout.tsx  Navbar.tsx  ProductCard.tsx  ProtectedRoute.tsx
web/app/src/lib/: format.ts
web/app/src/pages/: AdminProductPage.tsx  CartPage.tsx  CheckoutPage.tsx  LoginPage.tsx  NotFoundPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductListPage.tsx  SignupPage.tsx
web/app/src/store/: authStore.ts
web/app/src/types/: api.ts
web/app/tests/: CartItemRow.test.tsx  LoginPage.test.tsx  ProductCard.test.tsx  setup.ts
web/deploy/: deploy.sh  env.example
web/deploy/nginx/: mini-commerce-web.conf
