[tool.poetry]
name = "mini-commerce-backend"
version = "0.1.0"
description = "Mini Commerce Backend — Demo FastAPI application"
authors = ["Mini Commerce Demo"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
gunicorn = "^23.0.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
alembic = "^1.14.0"
asyncmy = "^0.2.9"
pydantic = { extras = ["email"], version = "^2.10.0" }
pydantic-settings = "^2.6.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
bcrypt = ">=4.0.0,<5.0.0"
greenlet = "^3.0.0"
structlog = "^24.4.0"
prometheus-fastapi-instrumentator = "^7.0.0"
prometheus-client = "^0.21.0"
slowapi = "^0.1.9"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
testcontainers = { extras = ["mysql", "redis"], version = "^4.8.0" }
ruff = "^0.8.0"
mypy = "^1.13.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ─── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "UP",       # pyupgrade
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "SIM",      # flake8-simplify
  "RUF",      # ruff-specific
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ─── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=40",
  "-v",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]
